--- a/templates/statements.html.twig
+++ b/templates/statements.html.twig
@@ -24,6 +24,9 @@
                         <button type="submit" class="btn btn-primary">
                             <span class="glyphicon glyphicon-search"></span>
                         </button>
+                        <a href="{{ route('statements.list') }}" class="btn btn-default">
+                            <span class="glyphicon glyphicon-refresh"></span>
+                        </a>
                     </form>
                     <div class="col-md-12 text-center">
                         <div class="row">
